# update-player-stats

./: manual_additions.csv  pyproject.toml  scrape-player-data.py  update-player-data.py
.github/workflows/: update-players.yml
data/: players_df.csv
